RESOLVED FIXED172554
[WK1] iframes in layer-backed NSViews are not cleared between successive draws
https://bugs.webkit.org/show_bug.cgi?id=172554
Summary [WK1] iframes in layer-backed NSViews are not cleared between successive draws
Myles C. Maxfield
Reported 2017-05-24 13:02:01 PDT
Update WebHTMLView to match AppKit's layout
Attachments
Needs tests (5.15 KB, patch)
2017-05-24 13:02 PDT, Myles C. Maxfield
no flags
WIP (9.50 KB, patch)
2017-05-24 17:08 PDT, Myles C. Maxfield
no flags
WIP (11.96 KB, patch)
2017-05-25 14:44 PDT, Myles C. Maxfield
no flags
WIP (10.67 KB, patch)
2017-05-25 14:46 PDT, Myles C. Maxfield
no flags
Patch (20.08 KB, patch)
2017-05-25 15:15 PDT, Myles C. Maxfield
no flags
Patch (20.18 KB, patch)
2017-05-25 15:16 PDT, Myles C. Maxfield
simon.fraser: review+
Patch for committing (20.26 KB, patch)
2017-05-25 16:54 PDT, Myles C. Maxfield
commit-queue: commit-queue-
Myles C. Maxfield
Comment 1 2017-05-24 13:02:24 PDT
Created attachment 311147 [details] Needs tests
Myles C. Maxfield
Comment 2 2017-05-24 13:02:56 PDT
Myles C. Maxfield
Comment 3 2017-05-24 13:18:47 PDT
Myles C. Maxfield
Comment 4 2017-05-24 17:08:18 PDT
Simon Fraser (smfr)
Comment 5 2017-05-24 17:14:21 PDT
Comment on attachment 311167 [details] WIP View in context: https://bugs.webkit.org/attachment.cgi?id=311167&action=review > Source/WebKit/mac/ChangeLog:3 > + Update WebHTMLView to match AppKit's layout This title should say something about double-drawing of iframe in layer-backed WebViews
Myles C. Maxfield
Comment 6 2017-05-25 14:44:48 PDT
Myles C. Maxfield
Comment 7 2017-05-25 14:46:12 PDT
Myles C. Maxfield
Comment 8 2017-05-25 15:15:13 PDT
Myles C. Maxfield
Comment 9 2017-05-25 15:16:08 PDT
Simon Fraser (smfr)
Comment 10 2017-05-25 15:18:55 PDT
Comment on attachment 311300 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=311300&action=review > Tools/DumpRenderTree/TestOptions.mm:99 > +bool TestOptions::webViewCompatible(const TestOptions& other) const Myabe webViewIsCompatibleWithOptions()
Myles C. Maxfield
Comment 11 2017-05-25 16:54:08 PDT
Created attachment 311318 [details] Patch for committing
WebKit Commit Bot
Comment 12 2017-05-25 17:38:51 PDT
Comment on attachment 311318 [details] Patch for committing Rejecting attachment 311318 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 311318, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in LayoutTests/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/3818297
Myles C. Maxfield
Comment 13 2017-05-25 17:43:03 PDT
Note You need to log in before you can comment on or make changes to this bug.